<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalii_personale"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        tools:ignore="RelativeOverlap" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/TV_DN"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="133dp"
        android:text="@string/data_nastere"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Edit_DataNastere"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="194dp"
        android:layout_marginLeft="194dp"
        android:layout_marginTop="133dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Edit_Cetatenie"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TV_Cet"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="222dp"
        android:text="@string/cetatenie"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/edit_CNP"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="398dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TV_CNP"
        android:layout_width="164dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="401dp"
        android:text="@string/cnp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/edit_Email"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TV_Email"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="475dp"
        android:text="@string/backupemail"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/edit_Spec"
        android:layout_width="208dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="314dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TV_Spec"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="314dp"
        android:text="@string/specializare"
        android:textSize="25sp" />

</RelativeLayout>